Fix left whitespace of first tweet intent btn

--- a/src/content/css/content.less
+++ b/src/content/css/content.less
@@ -422,6 +422,10 @@
         .content-source-logo {
             background-position: -24px 0;
         }
+
+        .hub-content-action:first-child {
+            margin-left: -10px;
+        }
         
         .hub-content-action-favorite {
             width: 18px;
